--- a/USBDetect/MainMenu.xib
+++ b/USBDetect/MainMenu.xib
@@ -7,7 +7,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AppDelegate" customModule="USBDetect" customModuleProvider="target"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application">
+        <customObject id="-3" userLabel="Application" customClass="NSObject">
             <connections>
                 <outlet property="delegate" destination="McT-in-5GS" id="0eE-4e-Wuz"/>
             </connections>
@@ -15,7 +15,7 @@
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu id="8Mc-Jd-zig">
             <items>
-                <menuItem title="Written by Keaton" enabled="NO" id="Zeq-ra-X7J">
+                <menuItem title="Open Source ❤️" enabled="NO" id="Zeq-ra-X7J">
                     <modifierMask key="keyEquivalentModifierMask"/>
                 </menuItem>
                 <menuItem title="Quit" keyEquivalent="q" id="ZGB-M4-X3m">
